# townwatch

./: .gitignore  CORRECTIONS_INTAKE.md  railway.comments.toml  railway.intake.toml  railway.toml
etl/: .env.example  Dockerfile  FORUM_TICK_SERVICE.md  Procfile  README.md  pyproject.toml  streamlit_app.py
etl/scrapers/: grovetown_officials.py
etl/scripts/: test_extract_one.py
etl/townwatch_etl/: __init__.py  accounts.py  activity.py  api.py  audit.py  build_phases.py  check_db.py  comments.py  config.py  corrections.py  db.py  document_text.py  email_client.py  email_events.py  extraction_cache.py  extraction_ledger.py  funds.py  http_client.py  identity.py  ingest_base.py  jurisdiction.py  llm_client.py  migrate.py  pipeline_health.py  pricing.py  resilience.py  run_lock.py  timezones.py
etl/townwatch_etl/campaign_finance/: __init__.py  extract.py  recordsearch.py
etl/townwatch_etl/extractors/: __init__.py  agendas.py  budgets.py  campaign_finance.py  chunking.py  council_roster.py  doc_formats.py  election_results.py  minutes.py  mistral_ocr.py  packets.py  pdf_text.py  rasterize.py  recovery.py
etl/townwatch_etl/jobs/: acquire_official_photos.py  acquire_staff.py  backfill_directory_nav.py  backfill_document_text.py  backfill_historical_officials.py  backfill_summaries.py  civicengage_officials.py  civicplus_board_rosters.py  cleanup_non_voting_officials.py  create_historical_staff_stubs.py  daily_refresh.py  discover_election_source.py  discover_gis_districts.py  dpi_sweep.py  estimate_onboarding.py  extract_agendas.py  extract_agendas_batch.py  extract_and_clean.py  extract_budgets.py  extract_campaign_finance.py  extract_embedded_minutes.py  extract_minutes.py  extract_minutes_batch.py  extract_packets.py  forum_tick.py  funds_admin.py  grovetown_meetings_inventory.py  grovetown_minutes_extract.py  grovetown_officials.py  grovetown_property_records.py  ingest_boundary.py  ingest_campaign_finance.py  ingest_districts.py  ingest_elections.py  meetings_inventory.py  merge_officials.py  monitor_clerk_contact.py  monitor_roster_changes.py  onboarding_smoke_test.py  pipeline_errors.py  (+19 more)
etl/townwatch_etl/patterns/: base.py  development_bundle.py  qa_data_anomalies.py  qa_official_name_typos.py  reconsidered_motion.py  recusal_absence.py  unanimity_rate.py
etl/townwatch_etl/recon/: __init__.py  __main__.py  validate.py
etl/townwatch_etl/repair/: __init__.py  engine.py  pdf_utils.py
etl/townwatch_etl/repair/handlers/: base.py  bundled_tally.py  official_as_petitioner.py  official_as_staff_recommender.py  orphan_official.py  petitioner_is_staff.py  voice_vote.py  vote_mismatch.py
etl/townwatch_etl/scrapers/: civicclerk_meetings.py  civicengage_agendacenter.py  civicengage_calendar.py  civicengage_officials_table.py  civicplus_board_list.py  edlio_meetings.py  grovetown_agendacenter.py  grovetown_officials.py
(+102 files in other folders)
