[project]
name = "townwatch-etl"
version = "0.1.0"
description = "TownWatch ETL pipeline — ingests public records into Postgres"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2",
    "anthropic>=0.40",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pdfplumber>=0.11",
    "python-dotenv>=1.0",
    "click>=8.1",
    "rapidfuzz>=3.10",
]

[project.scripts]
townwatch-etl = "townwatch_etl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
