[project]
name = "townwatch-etl"
version = "0.1.0"
description = "TownWatch ETL pipeline — ingests public records into Postgres"
requires-python = ">=3.9"
dependencies = [
    "psycopg[binary]>=3.2",
    "anthropic>=0.45",
    "pydantic>=2.0",
    "eval_type_backport>=0.2",  # PEP 604 syntax on Python <3.10
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "python-dotenv>=1.0",
    "jsonschema>=4.21",
    "reportlab>=4.5",
    "click>=8.1",
    "rapidfuzz>=3.10",
]

[project.scripts]
townwatch-etl = "townwatch_etl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
