[project]
name = "townwatch-etl"
version = "0.1.0"
description = "TownWatch ETL pipeline — ingests public records into Postgres"
requires-python = ">=3.9"
dependencies = [
    "psycopg[binary]>=3.2",
    "anthropic>=0.45",
    "pydantic>=2.0",
    "eval_type_backport>=0.2",  # PEP 604 syntax on Python <3.10
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pdfplumber>=0.11",
    "pypdf>=4.0",
    "pypdfium2>=4.0",   # permissive-license PDF→image rasterization (vision DPI control)
    "python-docx>=1.1",
    "python-dotenv>=1.0",
    "jsonschema>=4.21",
    "reportlab>=4.5",
    "click>=8.1",
    "rapidfuzz>=3.10",
    "fastapi>=0.115",   # correction-intake service (the one always-on ETL endpoint)
    "uvicorn>=0.30",    # ASGI server for the intake service
]

[project.optional-dependencies]
# Browser fetch tier (http_client.civic_get_rendered / fetch_page): bot-walled
# and JS-shell civic sites. Install in any environment that recons or scrapes a
# fetch_tier:browser jurisdiction:
#   pip install -e .[browser] && playwright install chromium
browser = ["playwright>=1.45"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Be explicit about what ships in the wheel. hatchling can auto-detect a
# package dir matching the project name, but that heuristic has changed
# across releases (an empty selection used to build a silent empty wheel;
# newer versions hard-error — which broke the Docker build). Naming the
# package removes the guesswork.
[tool.hatch.build.targets.wheel]
packages = ["townwatch_etl"]
